[project]
name = "nexus"
version = "0.1.0"
description = "n index assignment algorithm library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmaes>=0.10.0",
    "configspace>=1.2.1",
    "hyperopt>=0.2.7",
    "matplotlib>=3.10.7",
    "nearpy>=1.0.0",
    "numpy>=2.3.3",
    "optuna>=3.6.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "ray[tune]>=2.52.1",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
]
